[package]
name = "epoch-cli"
version = "1.0.0"
authors = ["Anthony Christe <achriste@redvoxsound.com>"]
edition = "2021"
description = "A small command line utility for working with epoch timestamps."
repository = "https://github.com/RedVoxInc/epoch-cli"
license = "MIT"
keywords = ["epoch", "timestamp", "cli", "conversion"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[[bin]]
path = "src/main.rs"
name = "epoch"

[dependencies]
time = { version = "0.3", features = ["large-dates"] }
clap = { version = "3.1", features = [ "derive" ] }
