[package]
name = "epoch-cli"
version = "1.0.2"
authors = ["Anthony Christe <anthony.christe@gmail.com.com>"]
edition = "2024"
description = "A small command line utility for working with epoch timestamps."
repository = "https://github.com/RedVoxInc/epoch-cli"
license = "MIT"
keywords = ["epoch", "timestamp", "cli", "conversion"]
categories = ["command-line-utilities", "date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[[bin]]
path = "src/main.rs"
name = "epoch"

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
time = { version = "0.3", features = ["large-dates"] }
